--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -175,10 +175,23 @@ body {
 
 .big-slider {
   width: 100%;
-  height: 440px;
+  height: 480px;
 }
 
 .small-slider {
   width: 100%;
   height: 340px;
+}
+
+
+.clip-slant-top {
+  clip-path: polygon(0 0%, 100% 60, 100% 100%, 0 100%);
+}
+
+.clip-slant-bottom {
+  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+}  
+
+.clip-slant-form {
+  clip-path: polygon(0 0, 100% 0, 100% 50%, 0 100%);
 }
